--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kalnia&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./sttyle.css">
+<link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body >
